# queue-manager

./: .codeclimate.json  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflow/: pytest_with_postgres.yml
.github/workflows/: pytest_with_postgres.yml
queue_manager/: asgi.py  default_db_data.py  mixins.py  models.py  rollbar_middleware.py  settings.py  setup.cfg  urls.py  views.py  wsgi.py
queue_manager/client/: apps.py  urls.py  views.py
queue_manager/migrations/: 0001_initial.py  0002_auto_20231030_1055.py  0003_auto_20231030_1118.py  0004_auto_20231030_1138.py  0005_auto_20231030_1157.py  0006_auto_20231030_1201.py  0007_auto_20231030_1211.py  0008_auto_20231030_1351.py  0009_auto_20231031_0952.py  0010_auto_20231031_1318.py  0011_auto_20231031_1331.py  0012_auto_20231103_1154.py
queue_manager/printer/: apps.py  urls.py  views.py
queue_manager/session/: apps.py  models.py  urls.py  views.py
queue_manager/status/: apps.py  models.py
queue_manager/task/: apps.py  forms.py  models.py  urls.py  views.py
queue_manager/templates/: base.html  debug.html  index.html  login.html
queue_manager/ticket/: apps.py  forms.py  models.py  urls.py  views.py
queue_manager/user/: apps.py  forms.py  models.py  operator_urls.py  operator_views.py  supervisor_urls.py  supervisor_views.py
tests/: conftest.py  test_home_page.py
tests/client/: conftest.py  test_print_ticket.py  test_screen.py
tests/fixtures/: test_services_base.py  test_sessions_base.json  test_tasks_additional.py  test_tasks_base.json  test_tickets_base.json  (+3 more)
(+99 files in other folders)
